Migração para Spring Boot 4 usando OpenRecipe